--- a/roles/internal/ubuntuDockerInstall/tasks/installDocker.yml
+++ b/roles/internal/ubuntuDockerInstall/tasks/installDocker.yml
@@ -1,11 +1,49 @@
 ---
 # tasks file for roles/ubuntuDockerInstall
+
+- name: Install aptitude using apt
+  apt:
+    name: aptitude
+    state: latest
+    update_cache: yes
+    force_apt_get: yes
+
+- name: Install required system packages
+  apt:
+    state: latest
+    update_cache: yes
+    pkg:
+      - apt-transport-https
+      - ca-certificates
+      - curl
+      - software-properties-common
+      - python3-pip
+      - virtualenv
+      - python3-setuptools
+
+- name: Add Docker GPG apt Key
+  apt_key:
+    url: https://download.docker.com/linux/ubuntu/gpg
+    state: present
+
+- name: Add Docker Repository
+  apt_repository:
+    repo: deb https://download.docker.com/linux/ubuntu focal stable
+    state: present
+
 - name: Install docker.io
-  delegate_to: "{{ item }}"
   apt:
     name: docker.io
     state: present
-  register: dockerInstalled
+
+- name: Install Docker Module for Python
+  pip:
+    name: docker
+
+- name: Pull default Docker image
+  docker_image:
+    name: ubuntu
+    source: pull
 
 - name: Start and enable docker at restart
   delegate_to: "{{ item }}"
@@ -13,5 +51,4 @@
     state: started
     name: docker
     enabled: yes
-  when: dockerInstalled.changed
     
