--- a/plays/ansible.cfg
+++ b/plays/ansible.cfg
@@ -3,3 +3,6 @@ roles_path = ../roles/internal:../roles/external
 vault_password_file = ../vpass
 inventory = ../staging
 interpreter_python = /usr/bin/python3
+
+[ssh_connection]
+pipelining = True
