--- a/roles/internal/ubuntuDockerInstall/tasks/main.yml
+++ b/roles/internal/ubuntuDockerInstall/tasks/main.yml
@@ -1,5 +1,57 @@
 ---
 # main.yml
-- name: Install and enable docker
-  include_tasks:  installDocker.yml
-  with_items: "{{ container }}"
+- name: Update apt-get repo and cache
+  apt:
+    update_cache: yes
+    force_apt_get: yes
+    cache_valid_time: 3600
+
+- name: Install aptitude using apt
+  apt:
+    name: aptitude
+    state: latest
+    update_cache: yes
+    force_apt_get: yes
+
+- name: Install required system packages
+  apt:
+    state: latest
+    update_cache: yes
+    pkg:
+     - apt-transport-https
+     - ca-certificates
+     - curl
+     - software-properties-common
+     - python3-pip
+     - virtualenv
+     - python3-setuptools
+# when: ansible_facts['os_famaily'] == 'Debian'
+
+- name: Add Docker GPG apt Key
+  apt_key:
+    ###url: https://download.docker.com/linux/ubuntu/gpg
+    url: https://download.docker.com/linux/raspbian/gpg
+    state: present
+
+- name: Add Docker Repository
+  apt_repository:
+    ####repo: deb https://download.docker.com/linux/ubuntu focal stable
+    repo: deb https://download.docker.com/linux/raspbian buster stable
+    state: present
+
+- name: Install docker.io and docker-compose
+  apt:
+    name:
+      - docker.io
+      - docker-compose
+    state: present
+
+- name: Install Docker Module for Python
+  pip:
+    name: docker
+
+- name: Start and enable docker at restart
+  systemd:
+    state: started
+    name: docker
+    enabled: yes
